--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=microservicio-persona
+server.port=8082
+
 spring.datasource.url=jdbc:mysql://localhost:3306/db_nueva?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
